style/output.css
/* ... */
.code-block .language-tag {
  display: none;
  /* position: absolute;
  top: 0;
  right: 0;
  font-size: 14px;
  background-color: #a5a5a5;
  color: #0c181d;
  border-radius: 0 5px 0 5px;
  padding: 2px 7px;
  font-weight: bold;
  text-transform: uppercase;
  font-style: normal; */
}

.code-block .code-block-inner {
  font-family: 'courier new', courier, monospace;
  font-style: normal;
}

pre i {
  font-style: normal;
}

.ball {
  display: inline-block;
  width: 100%;
  height: 100%;
  margin: 0;
  border-radius: 50%;
  position: relative;
  background: #18123A;
}

.logo::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: url("/images/leptos_sphere.svg")  ;
  animation: scrollBackground 5s linear infinite;
  z-index: 1;
}

.ball:before {
  content: "";
  position: absolute;
  background: radial-gradient(circle at 50% 120%,  rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0) 70%);
  border-radius: 50%;
  bottom: 2.5%;
  left: 5%;
  opacity: 0.6;
  height: 100%;
  width: 90%;
  -webkit-filter: blur(5px);
  z-index: 2;
}

.ball:after {
  width: 100%;
  height: 100%;
  content: "";
  position: absolute;
  top: 2%;
  left: 2%;
  border-radius: 50%;
  background: radial-gradient(circle at 50% 50%,  rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.25) 14%, rgba(255, 255, 255, 0) 24%);
  transform: translateX(-80px) translateY(-90px) skewX(-20deg);
  -webkit-filter: blur(10px);
  z-index:10;
}

.stage {
  pointer-events: none;
  display: block;
  -ms-perspective: 1200px;
  -o-perspective: 1200px;
  perspective: 1200px;
  -ms-perspective-origin: 50% 50%;
  -o-perspective-origin: 50% 50%;
  perspective-origin: 50% 50%;
}

.bg-red {
  background-color: red;
}

.bg-orange {
  background-color: orange;
}

.bg-yellow {
  background-color: yellow;
}

.hover\:bg-purple:hover {
  --tw-bg-opacity: 1;
  background-color: rgb(24 17 57 / var(--tw-bg-opacity));
}

.hover\:bg-opacity-50:hover {
  --tw-bg-opacity: 0.5;
}

.hover\:saturate-200:hover {
  --tw-saturate: saturate(2);
  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
}

.aria-\[current\]\:bg-purple[aria-current] {
  --tw-bg-opacity: 1;
  background-color: rgb(24 17 57 / var(--tw-bg-opacity));
}

.dark .dark\:border-eggshell {
  --tw-border-opacity: 1;
  border-color: rgb(241 250 238 / var(--tw-border-opacity));
}

.dark .dark\:bg-black {
  --tw-bg-opacity: 1;
  background-color: rgb(15 25 28 / var(--tw-bg-opacity));
}

.dark .dark\:stroke-eggshell {
  stroke: #F1FAEE;
}

.dark .dark\:text-eggshell {
  --tw-text-opacity: 1;
  color: rgb(241 250 238 / var(--tw-text-opacity));
}

@media (min-width: 640px) {
  .sm\:h-auto {
    height: auto;
  }

  .sm\:w-28 {
    width: 7rem;
  }

  .sm\:p-8 {
    padding: 2rem;
  }
}

@media (min-width: 768px) {
  .md\:mt-\[-60px\] {
    margin-top: -60px;
  }

  .md\:block {
    display: block;
  }

  .md\:max-w-\[360px\] {
    max-width: 360px;
  }

  .md\:gap-12 {
    gap: 3rem;
  }

  .md\:gap-8 {
    gap: 2rem;
  }

  .md\:p-6 {
    padding: 1.5rem;
  }

  .md\:py-24 {
    padding-top: 6rem;
    padding-bottom: 6rem;
  }

  .md\:pl-8 {
    padding-left: 2rem;
  }

  .md\:pr-6 {
    padding-right: 1.5rem;
  }

  .md\:pt-4 {
    padding-top: 1rem;
  }
}

@media (min-width: 1024px) {
  .lg\:mx-auto {
    margin-left: auto;
    margin-right: auto;
  }

  .lg\:my-32 {
    margin-top: 8rem;
    margin-bottom: 8rem;
  }

  .lg\:mt-20 {
    margin-top: 5rem;
  }

  .lg\:mt-24 {
    margin-top: 6rem;
  }

  .lg\:mt-28 {
    margin-top: 7rem;
  }

  .lg\:mt-\[-60px\] {
    margin-top: -60px;
  }

  .lg\:block {
    display: block;
  }

  .lg\:flex {
    display: flex;
  }

  .lg\:hidden {
    display: none;
  }

  .lg\:max-w-\[35ch\] {
    max-width: 35ch;
  }

  .lg\:max-w-\[400px\] {
    max-width: 400px;
  }

  .lg\:max-w-\[40ch\] {
    max-width: 40ch;
  }

  .lg\:max-w-\[45ch\] {
    max-width: 45ch;
  }

  .lg\:max-w-md {
    max-width: 28rem;
  }

  .lg\:flex-row {
    flex-direction: row;
  }

  .lg\:items-center {
    align-items: center;
  }

  .lg\:rounded-tr-lg {
    border-top-right-radius: 0.5rem;
  }

  .lg\:border-t-0 {
    border-top-width: 0px;
  }

  .lg\:bg-\[url\(\'\/images\/wave\.svg\'\)\] {
    background-image: url('/images/wave.svg');
  }

  .lg\:pl-12 {
    padding-left: 3rem;
  }

  .lg\:pr-8 {
    padding-right: 2rem;
  }

  .lg\:pt-8 {
    padding-top: 2rem;
  }

  .lg\:text-center {
    text-align: center;
  }

  .lg\:text-4xl {
    font-size: 2.25rem;
    line-height: 2.5rem;
  }

  .lg\:text-5xl {
    font-size: 3rem;
    line-height: 1;
  }

  .lg\:text-\[16px\] {
    font-size: 16px;
  }
}

@media (min-width: 1280px) {
  .xl\:justify-between {
    justify-content: space-between;
  }

  .xl\:gap-4 {
    gap: 1rem;
  }
}

@media (min-width: 1536px) {
  .\32xl\:ml-\[-100px\] {
    margin-left: -100px;
  }
}

@media (min-width: 1920px) {
  .\34xl\:left-0 {
    left: 0px;
  }

  .\34xl\:top-\[-10px\] {
    top: -10px;
  }

  .\34xl\:rounded-md {
    border-radius: 0.375rem;
  }

  .\34xl\:shadow-\[10px_10px_0px_\#190E3825\] {
    --tw-shadow: 10px 10px 0px #190E3825;
    --tw-shadow-colored: 10px 10px 0px var(--tw-shadow-color);
    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
  }
}

